Fix nested list spacing in comments
Fixes:

  https://wincent.com/issues/1686

--- a/app/views/sass/_comment-bubbles.sass
+++ b/app/views/sass/_comment-bubbles.sass
@@ -27,6 +27,7 @@ ol.comments li.admin
   +comment-bubble(white, #666, url(../images/comment-bubble-triangle-admin.png))
 
 // lists look crap if they are the first or last item in the bubble
-ol.comments ol, ol.comments ul
-  margin-bottom: 12px
-  margin-top: 12px
+ol.comments blockquote
+  > ol, > ul
+    margin-bottom: 12px
+    margin-top: 12px
