--- a/public/stylesheets/tweets.css
+++ b/public/stylesheets/tweets.css
@@ -10,6 +10,6 @@ ol.comments li.admin { list-style-type: none; }
 ol.comments li.admin cite { display: block; font-style: normal; background-image: url(../images/comment-bubble-triangle-admin.png); background-repeat: no-repeat; background-position-x: 60px; background-posiiton-y: 0px; padding-top: 20px; margin-left: 1em; margin-top: -22px; }
 ol.comments li.admin > blockquote { -webkit-border-radius: 1em; -moz-border-radius: 1em; border: 2px solid #666666; background: white; margin-bottom: 20px; }
 
-ol.comments ol, ol.comments ul { margin-bottom: 12px; margin-top: 12px; }
+ol.comments blockquote > ol, ol.comments blockquote > ul { margin-bottom: 12px; margin-top: 12px; }
 
 .overlength { background: #f9b8be; }
